--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,7 @@
     "Zafree"
   ],
   "license": "MIT",
-  "url": "https://github.com/zafree/bootaide/blob/master/LICENSE",
+  "url": "https://github.com/khaledaSabina/khaledaSabina.github.io/blob/master/LICENSE",
   "ignore": [
     "**/.*",
     "node_modules",
