--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "kit",
     "responsive"
   ],
-  "homepage": "http://zafree.github.io/bootaide",
-  "author": "Zafree",
+  "homepage": "http://khaledasabina.github.io",
+  "author": "khaleda Bintay Khaleque",
   "license": {
     "type": "MIT",
-    "url": "https://github.com/zafree/bootaide/blob/master/LICENSE"
+    "url": "https://github.com/khaledaSabina/khaledaSabina.github.io/blob/master/LICENSE"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
