--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,7 @@
     "interface"
   ],
   "authors": [
-    "Zafree"
+    "Musammat Samina"
   ],
   "license": "MIT",
   "url": "https://github.com/khaledaSabina/musammatsamina.github.io/blob/master/LICENSE",
